Closed
Bug 395888
Opened 18 years ago
Closed 18 years ago
After drag-dropping text to other textarea, the dragged textarea has no caret
Categories
(Core :: DOM: Editor, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: martijn.martijn, Assigned: mrbkap)
References
Details
(Keywords: regression, testcase)
Attachments
(2 files, 1 obsolete file)
|
366 bytes,
text/html
|
Details | |
|
4.82 KB,
patch
|
Details | Diff | Splinter Review |
See testcase, to reproduce the bug:
- Drag some text from textarea1 to textarea2 with the mouse
- Now click on textarea1 again
Expected result:
- Caret appears and blinks like it normally does
Actual result:
- No caret appearing
This seems to have regressed between 2006-04-17 and 2006-04-18, so apparently a regression from bug 287813.
Note that ideally textarea2 should get the focus after the drag-dropping operation, that's bug 280635 (if you could fix that, that would be even better!).
| Assignee | ||
Comment 2•18 years ago
|
||
I have a partial patch that might fix this bug (I haven't even compiled it yet). My initial suspicion is that this might be fallout from bug 390228.
| Assignee | ||
Comment 3•18 years ago
|
||
I'd worried about this earlier -- apparently the order of the dragexit/dragdrops is not necessarily backwards from the order of the dragenters (seems obvious now). This patch makes the presshell remember its caret so the editor can just tell it that it's done with the drag indicator, thereby removing ordering problems.
Assignee: nobody → mrbkap
Status: NEW → ASSIGNED
Attachment #281012 -
Flags: superreview?(roc)
Attachment #281012 -
Flags: review?(roc)
Comment on attachment 281012 [details] [diff] [review]
Proposed fix
great!
Attachment #281012 -
Flags: superreview?(roc)
Attachment #281012 -
Flags: superreview+
Attachment #281012 -
Flags: review?(roc)
Attachment #281012 -
Flags: review+
Attachment #281012 -
Flags: approval1.9+
| Assignee | ||
Comment 5•18 years ago
|
||
I realized that I'd forgotten to bump nsIPresShell's uuid.
Attachment #281012 -
Attachment is obsolete: true
| Assignee | ||
Comment 6•18 years ago
|
||
Fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Flags: in-testsuite?
| Reporter | ||
Comment 7•18 years ago
|
||
Verified fixed, using:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a9pre) Gecko/2007092305 Minefield/3.0a9pre
But with slightly different steps, I can still reproduce a similar bug, I filed bug 397283 for it.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•