Restore the right caret in all cases. bug 395888, r+sr+a=roc